PyQL CHANGELOG
==============

Pre 0.2
-------

 * YieldTermStructure refactor: internal storage of the term structures is now
   done under the format of a Handle[YieldTermStructure] or a RelinkableHandle
   if created with relinkable=True. Downstream methods are now all protected
   when using empty handles.
 * Swap example is now working.
 * Builds are finally usable on Windows 32 and 64 bit (two tests are failing due
   to numerical issues but the Singleton problem is fixed)
 * Python 3 support added (credits to Ed Schofield)
 * Drop support of Python 2.6
 * Many small fixes (seel full commit logs)
 * Added partial interface to Hull-White model
 * CalibrationHelper refactor: HestonHelper, SwaptionHelper now inherit from CalibrationHelper

Release 0.1
-----------

The main new feature of this version is the Market class hierarchy.
It provides a place for keeping all the market conventions specific
to a market segment.

- Added interface to IMM dates 
- In Market, you can now bootstrap curves with ED Futures
