@@ -11,5 +11,6 @@ cdef extern from 'ql/quote.hpp' namespace 'QuantLib':
 cdef extern from 'ql/quotes/simplequote.hpp' namespace 'QuantLib':
 
     cdef cppclass SimpleQuote(Quote):
+        SimpleQuote() except +
         SimpleQuote(Real value) except +
         Real setValue(Real value) except +
