@@ -10,10 +10,12 @@
 include '../types.pxi'
 
 from quantlib.handle cimport Handle, shared_ptr
-from quantlib.termstructures._yield_term_structure cimport YieldTermStructure
-from quantlib.time._daycounter cimport DayCounter
-from quantlib.quote cimport SimpleQuote
-from quantlib.instruments.instrument cimport Instrument
+cimport quantlib.termstructures._yield_term_structure as _yts
+cimport quantlib.time._daycounter as _dc
+from quantlib.quotes cimport SimpleQuote
+cimport quantlib.instruments._instrument as _ins
+cimport quantlib.pricingengines._pricing_engine as _pe
+
 
 cimport quantlib._quote as _qt
 cimport quantlib.processes._black_scholes_process as _bs
@@ -21,21 +23,27 @@ cimport quantlib.processes._black_scholes_process as _bs
 cdef extern from 'ql/instruments/impliedvolatility.hpp' namespace 'QuantLib::detail':
 
     cdef cppclass ImpliedVolatilityHelper:
-        @staticmethod
-        Volatility calculate(Instrument& instrument,
-                             PricingEngine& engine,
-                             SimpleQuote& volQuote,
+        pass
+
+    # The returned process is equal to the passed one, except
+    # for the volatility which is flat and whose value is driven
+    # by the passed quote.
+
+    cdef shared_ptr[_bs.GeneralizedBlackScholesProcess] IVH_clone \
+         'QuantLib::detail::ImpliedVolatilityHelper::clone'(
+                     shared_ptr[_bs.GeneralizedBlackScholesProcess]& process,
+                     shared_ptr[_qt.SimpleQuote]& quote) except +
+
+    # QuantLib::ImpliedVolatilityHelper static methods
+    cdef Volatility IVH_calculate \
+         'QuantLib::detail::ImpliedVolatilityHelper::calculate'(_ins.Instrument& instrument,
+                             _pe.PricingEngine& engine,
+                             _qt.SimpleQuote& volQuote,
                              Real targetValue,
                              Real accuracy,
-                            Natural maxEvaluations,
+                             Natural maxEvaluations,
                              Volatility minVol,
                              Volatility maxVol) except +
 
-        # The returned process is equal to the passed one, except
-        # for the volatility which is flat and whose value is driven
-        # by the passed quote.
             
-        @staticmethod
-        shared_ptr[GeneralizedBlackScholesProcess] clone(
-                     shared_ptr[_bs.GeneralizedBlackScholesProcess]& process,
-                     shared_ptr[_qt.SimpleQuote]& quote)
+        
