@@ -11,10 +11,9 @@ class TestConstraint(unittest.TestCase):
     def test_1(self):
         c = HestonHullWhiteCorrelationConstraint(-0.5)
 
-        # dummy Heston parameters p[3] is heston correlation
+        # Heston parameter p[3] is correlation
 
         p = qlarray_from_pyarray([1, 1, 1, 0.5, 1])
-        print("p[3]: %f" % p[3])
 
         res = c.test(p)
 
